--- a/MealService/MealService/Web.config
+++ b/MealService/MealService/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="MealServiceContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=MealAPIDB; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MealAPIDB.mdf" providerName="System.Data.SqlClient" />
+    <add name="MealServiceContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=MealAPIDB; Integrated Security=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
